[tool.poetry]
name = "my-first-website"
version = "0.1.0"
description = "This is my first deploy"
authors = ["Alina Makarovskaya <makarovskaya1307@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
